--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-data/
-dataset/
-metrics/
-models/
-__pycache__/
-trainers/__pycache__/
-utils/__pycache__/
+*/data/
+*/dataset/
+*/metrics/
+*/models/
+*/__pycache__/
+*/trainers/__pycache__/
+*/utils/__pycache__/
